# packages/rest/src/generated/swagger.json
@@ -78,6 +78,396 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"CredentialSupportedBrief": {
+				"properties": {
+					"cryptographic_binding_methods_supported": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"cryptographic_suites_supported": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"OID4VCICredentialFormat": {
+				"type": "string",
+				"enum": [
+					"jwt_vc_json",
+					"jwt_vc_json-ld",
+					"ldp_vc",
+					"vc+sd-jwt",
+					"jwt_vc"
+				]
+			},
+			"NameAndLocale": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"locale": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": {}
+			},
+			"ImageInfo": {
+				"description": "Important Note: please be aware that these Common interfaces are based on versions v1_0.11 and v1_0.09",
+				"properties": {
+					"url": {
+						"type": "string"
+					},
+					"alt_text": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": {}
+			},
+			"LogoAndColor": {
+				"properties": {
+					"logo": {
+						"$ref": "#/components/schemas/ImageInfo"
+					},
+					"description": {
+						"type": "string"
+					},
+					"background_color": {
+						"type": "string"
+					},
+					"text_color": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CredentialsSupportedDisplay": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/NameAndLocale"
+					},
+					{
+						"$ref": "#/components/schemas/LogoAndColor"
+					},
+					{
+						"properties": {
+							"background_image": {
+								"$ref": "#/components/schemas/ImageInfo"
+							},
+							"name": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"name"
+						],
+						"type": "object"
+					}
+				]
+			},
+			"CommonCredentialSupported": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/CredentialSupportedBrief"
+					},
+					{
+						"properties": {
+							"display": {
+								"items": {
+									"$ref": "#/components/schemas/CredentialsSupportedDisplay"
+								},
+								"type": "array"
+							},
+							"id": {
+								"type": "string"
+							},
+							"format": {
+								"anyOf": [
+									{
+										"$ref": "#/components/schemas/OID4VCICredentialFormat"
+									},
+									{
+										"type": "string"
+									}
+								]
+							}
+						},
+						"required": [
+							"format"
+						],
+						"type": "object"
+					}
+				]
+			},
+			"CredentialSubjectDisplay": {
+				"properties": {
+					"mandatory": {
+						"type": "boolean"
+					},
+					"value_type": {
+						"type": "string"
+					},
+					"display": {
+						"items": {
+							"$ref": "#/components/schemas/NameAndLocale"
+						},
+						"type": "array"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IssuerCredentialSubjectDisplay": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/CredentialSubjectDisplay"
+					},
+					{
+						"properties": {},
+						"additionalProperties": {
+							"$ref": "#/components/schemas/CredentialSubjectDisplay"
+						},
+						"type": "object"
+					}
+				]
+			},
+			"IssuerCredentialSubject": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": {
+					"$ref": "#/components/schemas/IssuerCredentialSubjectDisplay"
+				}
+			},
+			"CredentialSupportedJwtVcJson": {
+				"properties": {
+					"types": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"credentialSubject": {
+						"$ref": "#/components/schemas/IssuerCredentialSubject"
+					},
+					"order": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"format": {
+						"type": "string",
+						"enum": [
+							"jwt_vc_json",
+							"jwt_vc"
+						]
+					}
+				},
+				"required": [
+					"types",
+					"format"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ICredentialContext": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"did": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Record_string.any_": {
+				"properties": {},
+				"additionalProperties": {},
+				"type": "object",
+				"description": "Construct a type with a set of properties K of type T"
+			},
+			"AdditionalClaims": {
+				"$ref": "#/components/schemas/Record_string.any_"
+			},
+			"ICredentialContextType": {
+				"anyOf": [
+					{
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/ICredentialContext"
+							},
+							{
+								"$ref": "#/components/schemas/AdditionalClaims"
+							}
+						]
+					},
+					{
+						"type": "string"
+					}
+				]
+			},
+			"CredentialSupportedJwtVcJsonLdAndLdpVc": {
+				"properties": {
+					"types": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"@context": {
+						"items": {
+							"$ref": "#/components/schemas/ICredentialContextType"
+						},
+						"type": "array"
+					},
+					"credentialSubject": {
+						"$ref": "#/components/schemas/IssuerCredentialSubject"
+					},
+					"order": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"format": {
+						"type": "string",
+						"enum": [
+							"ldp_vc",
+							"jwt_vc_json-ld"
+						]
+					}
+				},
+				"required": [
+					"types",
+					"@context",
+					"format"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CredentialSupportedSdJwtVc": {
+				"properties": {
+					"format": {
+						"type": "string",
+						"enum": [
+							"vc+sd-jwt"
+						],
+						"nullable": false
+					},
+					"vct": {
+						"type": "string"
+					},
+					"claims": {
+						"$ref": "#/components/schemas/IssuerCredentialSubject"
+					},
+					"order": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"format",
+					"vct"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CredentialSupported": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/CommonCredentialSupported"
+					},
+					{
+						"anyOf": [
+							{
+								"$ref": "#/components/schemas/CredentialSupportedJwtVcJson"
+							},
+							{
+								"$ref": "#/components/schemas/CredentialSupportedJwtVcJsonLdAndLdpVc"
+							},
+							{
+								"$ref": "#/components/schemas/CredentialSupportedSdJwtVc"
+							}
+						]
+					}
+				]
+			},
+			"OpenId4VciCredentialSupportedWithId": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/CredentialSupported"
+					},
+					{
+						"properties": {
+							"id": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"id"
+						],
+						"type": "object"
+					}
+				]
+			},
+			"MetadataDisplay": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/NameAndLocale"
+					},
+					{
+						"$ref": "#/components/schemas/LogoAndColor"
+					},
+					{
+						"properties": {
+							"name": {
+								"type": "string"
+							}
+						},
+						"type": "object"
+					}
+				]
+			},
+			"OpenId4VciIssuerMetadataDisplay": {
+				"$ref": "#/components/schemas/MetadataDisplay"
+			},
+			"OpenId4VciCreateIssuerOptions": {
+				"properties": {
+					"issuerId": {
+						"type": "string",
+						"description": "Id of the issuer, not the id of the issuer record. Will be exposed publicly"
+					},
+					"credentialsSupported": {
+						"items": {
+							"$ref": "#/components/schemas/OpenId4VciCredentialSupportedWithId"
+						},
+						"type": "array"
+					},
+					"display": {
+						"items": {
+							"$ref": "#/components/schemas/OpenId4VciIssuerMetadataDisplay"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"credentialsSupported"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ThreadId": {
 				"type": "string",
 				"example": "ea4e5e69-fc04-465a-90d2-9f8ff78aa71d"
@@ -1005,10 +1395,10 @@
 					"label": {
 						"type": "string"
 					},
-					"goalCode": {
+					"alias": {
 						"type": "string"
 					},
-					"alias": {
+					"goalCode": {
 						"type": "string"
 					},
 					"imageUrl": {
@@ -1041,10 +1431,10 @@
 					"label": {
 						"type": "string"
 					},
-					"goalCode": {
+					"alias": {
 						"type": "string"
 					},
-					"alias": {
+					"goalCode": {
 						"type": "string"
 					},
 					"imageUrl": {
@@ -2140,12 +2530,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"Record_string.any_": {
-				"properties": {},
-				"additionalProperties": {},
-				"type": "object",
-				"description": "Construct a type with a set of properties K of type T"
 			},
 			"DidResolutionMetadata": {
 				"properties": {
@@ -3802,6 +4186,43 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/CreateTenantOptions"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/openid4vc/issuers": {
+			"post": {
+				"operationId": "CreateIssuer",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Initiate a new openid4vc issuance session by creating a credential offer",
+				"tags": [
+					"OpenID4VC Issuer"
+				],
+				"security": [
+					{
+						"tenants": [
+							"tenant"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/OpenId4VciCreateIssuerOptions"
 							}
 						}
 					}
